[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycobaltix"
version = "0.1.0"
description = "코발틱스 파이썬 유틸리티 패키지"
readme = "README.md"
authors = [
    {name = "steven", email = "steven@cobaltix.io"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/KAIS-Inc/pycobaltix"
"Bug Tracker" = "https://github.com/KAIS-Inc/pycobaltix/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pycobaltix"]